wip: add more endpoint to product controller
